[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/icons/snowflake.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/package-variant-closed.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/shield-outline.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/react.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/image-filter-hdr.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/planet.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/robot-industrial.png" type="Texture" id=7]
[ext_resource path="res://assets/icons/fire.png" type="Texture" id=8]
[ext_resource path="res://prefabs/ui/game/overview.gd" type="Script" id=9]

[node name="Overview" type="VBoxContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 459.0
margin_bottom = 593.0
size_flags_horizontal = 3
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelPlanets" type="Label" parent="."]
margin_right = 452.0
margin_bottom = 14.0
text = "Planets"

[node name="Planets" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 452.0
margin_bottom = 50.0

[node name="CheckboxLava" type="CheckBox" parent="Planets"]
margin_right = 48.0
margin_bottom = 32.0
mouse_filter = 1
pressed = true
icon = ExtResource( 8 )

[node name="CheckboxIron" type="CheckBox" parent="Planets"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 32.0
mouse_filter = 1
pressed = true
icon = ExtResource( 5 )

[node name="CheckboxEarth" type="CheckBox" parent="Planets"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 32.0
mouse_filter = 1
pressed = true
icon = ExtResource( 6 )

[node name="CheckboxIce" type="CheckBox" parent="Planets"]
margin_left = 156.0
margin_right = 204.0
margin_bottom = 32.0
mouse_filter = 1
pressed = true
icon = ExtResource( 1 )

[node name="LabelShips" type="Label" parent="."]
margin_top = 54.0
margin_right = 452.0
margin_bottom = 68.0
text = "Ships"

[node name="Ships" type="HBoxContainer" parent="."]
margin_top = 72.0
margin_right = 452.0
margin_bottom = 104.0

[node name="CheckboxCombat" type="CheckBox" parent="Ships"]
margin_right = 48.0
margin_bottom = 32.0
mouse_filter = 1
pressed = true
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckboxUtility" type="CheckBox" parent="Ships"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 32.0
mouse_filter = 1
pressed = true
icon = ExtResource( 4 )

[node name="CheckboxTransport" type="CheckBox" parent="Ships"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 32.0
mouse_filter = 1
pressed = true
icon = ExtResource( 2 )

[node name="CheckboxMiner" type="CheckBox" parent="Ships"]
margin_left = 156.0
margin_right = 204.0
margin_bottom = 32.0
mouse_filter = 1
pressed = true
icon = ExtResource( 7 )

[node name="ItemTree" type="Tree" parent="."]
margin_top = 108.0
margin_right = 452.0
margin_bottom = 586.0
mouse_filter = 1
size_flags_vertical = 3
columns = 5
select_mode = 2
[connection signal="toggled" from="Planets/CheckboxLava" to="." method="_on_list_entity_toggled" flags=3 binds= [ "Lava" ]]
[connection signal="toggled" from="Planets/CheckboxIron" to="." method="_on_list_entity_toggled" flags=3 binds= [ "Iron" ]]
[connection signal="toggled" from="Planets/CheckboxEarth" to="." method="_on_list_entity_toggled" flags=3 binds= [ "Earth" ]]
[connection signal="toggled" from="Planets/CheckboxIce" to="." method="_on_list_entity_toggled" flags=3 binds= [ "Ice" ]]
[connection signal="toggled" from="Ships/CheckboxCombat" to="." method="_on_list_entity_toggled" flags=3 binds= [ "Combat" ]]
[connection signal="toggled" from="Ships/CheckboxUtility" to="." method="_on_list_entity_toggled" flags=3 binds= [ "Utility" ]]
[connection signal="toggled" from="Ships/CheckboxTransport" to="." method="_on_list_entity_toggled" flags=3 binds= [ "Transport" ]]
[connection signal="toggled" from="Ships/CheckboxMiner" to="." method="_on_list_entity_toggled" flags=3 binds= [ "Miner" ]]
